[package]
name = "target-triple"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "TARGET and HOST triples"
documentation = "https://docs.rs/target-triple"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/target-triple"
rust-version = "1.56"
