[package]
name = "target-triple"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "TARGET and HOST triples"
documentation = "https://docs.rs/target-triple"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/target-triple"
rust-version = "1.58"

[package.metadata.docs.rs]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
